--- a/frontend/desarrolladoras.html
+++ b/frontend/desarrolladoras.html
@@ -107,8 +107,8 @@
                 presidente_actual: document.getElementById("form-presidente_actual").value.trim()
             };
 
-            const method ="POST";
-            const url = desarrolladorasUrl;
+            const method = id ? "PUT" : "POST";
+            const url = id ? `${desarrolladorasUrl}/${id}` : desarrolladorasUrl;
 
             fetch(url, {
                 method,
@@ -120,7 +120,8 @@
                 return res.json();
             })
             .then(() => {
-                showInfoNotification("Desarrolladora agregada");
+                document.getElementById("navbar-container").scrollIntoView({ behavior: 'smooth' });
+                showInfoNotification(id ? "Desarrolladora actualizada" : "Desarrolladora agregada");
                 resetFormulario();
                 cargarDesarrolladoras();
             })
@@ -128,6 +129,20 @@
                 console.error(err);
                 showErrorNotification(err.message);
             });
+        }
+        function editarDesarrolladora(d) {
+            document.getElementById("form-id").value = d.id;
+            document.getElementById("form-nombre").value = d.nombre;
+            document.getElementById("form-imagen_url").value = d.imagen_url || "";
+            document.getElementById("form-fecha_fundacion").value = d.fecha_fundacion || "";
+            document.getElementById("form-pais_sede_central").value = d.pais_sede_central;
+            document.getElementById("form-presidente_actual").value = d.presidente_actual;
+
+            document.getElementById("form-submit").textContent = "Actualizar";
+            document.getElementById("form-cancelar").classList.remove("is-hidden");
+            document.getElementById("form-fecha_fundacion").disabled = true;
+
+            document.getElementById("desarrolladora-form").scrollIntoView({ behavior: 'smooth' });
         }
 
         function resetFormulario() {
@@ -137,10 +152,36 @@
             document.getElementById("form-fecha_fundacion").value = "";
             document.getElementById("form-pais_sede_central").value = "";
             document.getElementById("form-presidente_actual").value = "";
+
             document.getElementById("form-submit").textContent = "Guardar";
             document.getElementById("form-cancelar").classList.add("is-hidden");
-        }
+            document.getElementById("form-fecha_fundacion").disabled = false;
 
+
+        }
+        
+        function deleteDesarrolladora(id){
+            fetch(`${desarrolladorasUrl}/${id}`, { method: "DELETE" })
+                .then(res => {
+                    document.getElementById("navbar-container").scrollIntoView({ behavior: 'smooth' });
+                    if (!res.ok) return res.text().then(text => { throw new Error(text) });
+                    return res.json();
+                })
+                .then(() => {
+                    document.getElementById("navbar-container").scrollIntoView({ behavior: 'smooth' });
+                    showInfoNotification("Desarrolladora eliminada");
+                    cargarDesarrolladoras();
+                })
+                .catch(err => {
+                    console.error(err);
+                    showErrorNotification(err.message);
+                });
+        }
+        function confirmDelete(id, nombre) {
+            if (confirm(`¿Estas seguro de eliminar desarrolladora "${nombre}"? Se eliminaran todos los juegos asociadas a esta y sus comentarios`)) {
+                deleteDesarrolladora(id)
+            }
+        }
 
         function showInfoNotification(message) {
             closeNotification("notification-container-error");
