--- a/frontend/comentarios.html
+++ b/frontend/comentarios.html
@@ -212,7 +212,27 @@
             document.getElementById("form-cancelar").classList.add("is-hidden");
             document.getElementById("form-fecha_publicacion").disabled = false;
     }
-
+    function eliminarComentario(id){
+        fetch(`${comentariosUrl}/${id}`, { method: "DELETE" })
+            .then(res => {
+                if (!res.ok) return res.text().then(text => { throw new Error(text) });
+                return res.json();
+            })
+            .then(() => {
+                showInfoNotification("Comentario eliminado");
+                cargarComentarios();
+            })
+            .catch(err => {
+                console.error(err);
+                showErrorNotification(err.message);
+        });
+    }
+    function confirmDelete(id, usuario) {
+        if (confirm(`¿Eliminar comentario de "${usuario}"?`)) {
+            document.getElementById("navbar-container").scrollIntoView({ behavior: 'smooth' });
+            eliminarComentario(id)
+        }
+    }
 
     function showInfoNotification(message) {
         closeNotification("notification-container-error");
