Arreglo la redireccion a los formularios

--- a/frontend/comentarios.html
+++ b/frontend/comentarios.html
@@ -100,7 +100,7 @@
                 </p>
             </div>
             <div class="buttons mt-3">
-                <a class="button is-small is-info" href="agregar_comentario.html?id=${c.id}">
+                <a class="button is-small is-info" href="comentario-form.html?id=${c.id}">
                 <span class="icon"><i class="fas fa-edit"></i></span>
                 <span>Editar</span>
                 </a>
