--- a/frontend/desarrolladoras.html
+++ b/frontend/desarrolladoras.html
@@ -87,7 +87,7 @@
                 <td>${fecha}</td>
                 <td>${d.pais_sede_central}</td>
                 <td>${d.presidente_actual}</td>
-                <td><a class="button is-info is-small" href="agregar_desarrolladoras.html?id=${d.id}"><i class="fas fa-edit"></i></a></td>
+                <td><a class="button is-info is-small" href="desarrolladora-form.html?id=${d.id}"><i class="fas fa-edit"></i></a></td>
                 <td><button class="button is-danger is-small" onclick='borrar(${d.id}, "${d.nombre}")'><i class="fas fa-trash-alt"></i></button></td>
               </tr>
             `;
