--- a/frontend/desarrolladora-form.html
+++ b/frontend/desarrolladora-form.html
@@ -72,6 +72,7 @@
     </div>
   </section>
 
+  <script src="./src/env.js"></script>
   <script src="./src/navbar.js"></script>
   <script>
     const paises = [
@@ -115,7 +116,7 @@
       paises_input.appendChild(pais);
     });
 
-    const desarrolladorasUrl = "http://localhost:3000/api/v1/desarrolladoras";
+    const desarrolladorasUrl = window._env_.API_URL + "/desarrolladoras";
     const params = new URLSearchParams(window.location.search);
     const id = params.get("id");
 
