--- a/frontend/generos.html
+++ b/frontend/generos.html
@@ -83,9 +83,10 @@
       </p>
     </div>
   </footer>
+  <script src="./src/env.js"></script>
   <script src="./src/navbar.js"></script>
   <script>
-    const generosBackendUrl = "http://localhost:3000/api/v1/generos";
+    const generosBackendUrl = window._env_.API_URL + "/generos";    
     function cargarGeneros() {
       let generosTableBody = document.getElementById("generos-table-body");
       generosTableBody.innerHTML = "";
