--- a/frontend/juegos.html
+++ b/frontend/juegos.html
@@ -43,10 +43,10 @@
     </div>
     
 
-
+    <script src="./src/env.js"></script>
     <script src="./src/navbar.js"></script>
     <script>
-        const juegosBackendUrl = "http://localhost:3000/api/v1/juegos";
+        const juegosBackendUrl = window._env_.API_URL + "/juegos";
 
         function cargarJuegos() {
             let juegosTableBody = document.getElementById("juegos-table-body");
