Se agrega el nombre del juego en get /comentarios y se mejora la perfomance en front de comentarios

--- a/frontend/comentarios.html
+++ b/frontend/comentarios.html
@@ -78,9 +78,6 @@
       contenedor.innerHTML = "";
 
       for (const c of data) {
-        let response = await fetch(`http://localhost:3000/api/v1/juegos/${c.juego_id}`);
-        const juego = await response.json();
-
         const fecha_formateada = new Date(c.fecha_publicacion).toLocaleDateString('en-CA');
 
         const comentarioCard = document.createElement("div");
@@ -91,7 +88,7 @@
             <div class="content">
                 <p>
                 <strong>${c.usuario}</strong>
-                <small>| Juego: ${juego.nombre}</small>
+                <small>| Juego: ${c.juego_nombre}</small>
                 <br/>
                 <span class="has-text-grey is-size-7">
                     Fecha: ${fecha_formateada || "—"} | Calificación: ${c.calificacion} ⭐ | Horas jugadas: ${c.horas_jugadas ?? "—"} | Terminado: ${c.terminado ? "Sí" : "No"}
