--- a/frontend/desarrolladoras.html
+++ b/frontend/desarrolladoras.html
@@ -52,7 +52,7 @@
               <th>Fundación</th>
               <th>País</th>
               <th>Presidente</th>
-              <th>Editar</th>
+              <th>Ver página</th>
               <th>Borrar</th>
             </tr>
           </thead>
@@ -88,7 +88,7 @@
                 <td>${fecha}</td>
                 <td>${d.pais_sede_central}</td>
                 <td>${d.presidente_actual}</td>
-                <td><a class="button is-info is-small" href="desarrolladora-form.html?id=${d.id}"><i class="fas fa-edit"></i></a></td>
+                <td><a class="button is-link is-small" href="detalles-desarrolladora.html?id=${d.id}"><i class="fas fa-eye"></i> Ver</a></td>
                 <td><button class="button is-danger is-small" onclick='borrar(${d.id}, "${d.nombre}")'><i class="fas fa-trash-alt"></i></button></td>
               </tr>
             `;
