agrego tipo de input URL a imagen

--- a/frontend/desarrolladora-form.html
+++ b/frontend/desarrolladora-form.html
@@ -44,7 +44,7 @@
           </div>
           <div class="column is-half">
             <label class="label">URL Imagen</label>
-            <input class="input" id="form-imagen_url" />
+            <input class="input" type="url" id="form-imagen_url" />
           </div>
           <div class="column is-half">
             <label class="label">Fecha fundación</label>
